<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">lab2</string>
    <string name="title_activity_one">activity_one</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="settings">Настройки</string>
    <string name="push_notification">Push - уведомления</string>
    <string name="track_city">Определять город автоматически</string>
    <string name="finger_print">Вход по отпечатку пальца</string>
    <string name="menu_button">menu_button</string>
    <string name="drop_authorization">Сбросить авторизацию</string>
    <string name="app_version">Версия приложения 4.41.2</string>
    <string name="message_text">Сообщения</string>
    <string name="main_title">Отправляйте и получайте сообщения</string>
    <string name="main_text">Личные сообщения - это приватная переписка в Твиттере. В них можно делиться в твитами, медиафайлами и другим контентом.</string>
    <string name="second_button_text">Написать сообщение</string>
    <string name="third_header_text">войти или\nзарегистрироваться</string>
    <string name="third_text">Мы отправим на номер SMS-сообщение с кодом подтверждения</string>
    <string name="third_hint">+7 (___) ___-__-__</string>
    <string name="third_button_text">Получить код</string>
    <string name="third_footer_text">При входе вы соглашаетесь с условиями</string>
    <string name="fourth_header_title">ОТКРЫТИЕ</string>
    <string name="fourth_header_title_second_part">Брокер</string>
    <string name="fourth_main_text">Откройте брокерский счет быстро и удобно.</string>
    <string name="fourth_first_button">Открыть счет</string>
    <string name="fourth_second_button">Я уже клиент</string>
</resources>