<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".FirstActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/header"
        android:background="@color/first_main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/first_main_color"
            android:contentDescription="@string/menu_button"
            app:layout_constraintHorizontal_bias="0.043"
            app:srcCompat="@drawable/burger_menu" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="50dp"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toEndOf="@+id/menu_button"
            app:layout_constraintVertical_bias="0.508" />

    </Toolbar>

    <LinearLayout
        android:id="@+id/settings_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/push_notification"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/push_notification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:theme="@style/FirstSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/track_city"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/track_city"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:theme="@style/FirstSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/finger_print"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/finger_print"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:theme="@style/FirstSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/drop_authorization"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/first_main_color"
        android:text="@string/drop_authorization"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_menu"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop_authorization"
        app:layout_constraintVertical_bias="0.900" />

</androidx.constraintlayout.widget.ConstraintLayout>